Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/SurveyNew__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>