Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Candidate_Count__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Count__c</fullName>
    <label>Candidate Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>