Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Completed_Survey_Count__c.field-meta.xml
<CustomField>
    <fullName>Completed_Survey_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Survey Responses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>