Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Confirmation_Text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Text__c</fullName>
    <inlineHelpText>This text is displayed after the survey is completed</inlineHelpText>
    <label>Confirmation Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>