Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=200x200&amp;data=	https://blue-arrow--test.sandbox.my.site.com/candidate/s/survey?recordId=&apos;&amp;Id ,&apos;Scan QR code to open record in mobile.&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>