Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Question_Count__c.field-meta.xml
<CustomField>
    <fullName>Question_Count__c</fullName>
    <label>Question Count</label>
    <summaryForeignKey>Survey_Question__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>