Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Questions_Without_Choices__c.field-meta.xml
<CustomField>
    <fullName>Questions_Without_Choices__c</fullName>
    <label>Questions Without Choices</label>
    <summaryFilterItems>
        <field>Survey_Question__c.Choice_Count__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Survey_Question__c.Question_Type__c</field>
        <operation>equals</operation>
        <value>Choices, Multi-Select Choices</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Question__c.Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>