Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Survey_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_End_Date__c</fullName>
    <label>Survey End Date</label>
    <type>Date</type>
</CustomField>