Frankbelford/uatv1ba/force-app/main/default/objects/SurveyNew__c/fields/Welcome_Text__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Text__c</fullName>
    <label>Welcome Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>